shrink clipping-svg to stop conflict with navbar

--- a/css/style.css
+++ b/css/style.css
@@ -299,6 +299,7 @@ form {
 
 #clipping-svg {
     position: absolute;
+    width: 0;
 }
 
 
